@@ -147,6 +147,14 @@ examples/i18n/sk/features/addition.feature
 examples/i18n/sk/features/division.feature
 examples/i18n/sk/features/step_definitons/calculator_steps.rb
 examples/i18n/sk/lib/calculator.rb
+examples/i18n/sr-latn/Rakefile
+examples/i18n/sr-latn/features/sabiranje.feature
+examples/i18n/sr-latn/features/step_definitons/calculator_steps.rb
+examples/i18n/sr-latn/lib/calculator.rb
+examples/i18n/sr/Rakefile
+examples/i18n/sr/features/sabiranje.feature
+examples/i18n/sr/features/step_definitons/calculator_steps.rb
+examples/i18n/sr/lib/calculator.rb
 examples/i18n/tr/Rakefile
 examples/i18n/tr/features/bölme.feature
 examples/i18n/tr/features/step_definitons/hesap_makinesi_adımları.rb
@@ -282,6 +290,7 @@ examples/webrat/features/step_definitions/kvasir_steps.rb
 examples/webrat/features/support/env.rb
 features/background.feature
 features/bug_371.feature
+features/bug_464.feature
 features/bug_475.feature
 features/cucumber_cli.feature
 features/cucumber_cli_diff_disabled.feature
@@ -299,6 +308,7 @@ features/html_formatter/a.html
 features/junit_formatter.feature
 features/language_from_header.feature
 features/language_help.feature
+features/listener_debugger_formatter.feature
 features/multiline_names.feature
 features/negative_tagged_hooks.feature
 features/post_configuration_hook.feature
@@ -328,6 +338,7 @@ gem_tasks/gemspec.rake
 gem_tasks/rspec.rake
 gem_tasks/sass.rake
 gem_tasks/sdoc.rake
+geminstaller.yml
 lib/README.rdoc
 lib/autotest/cucumber.rb
 lib/autotest/cucumber_mixin.rb
@@ -372,6 +383,7 @@ lib/cucumber/formatter/color_io.rb
 lib/cucumber/formatter/console.rb
 lib/cucumber/formatter/cucumber.css
 lib/cucumber/formatter/cucumber.sass
+lib/cucumber/formatter/debug.rb
 lib/cucumber/formatter/duration.rb
 lib/cucumber/formatter/html.rb
 lib/cucumber/formatter/junit.rb
@@ -387,7 +399,6 @@ lib/cucumber/formatter/unicode.rb
 lib/cucumber/formatter/usage.rb
 lib/cucumber/language_support.rb
 lib/cucumber/language_support/language_methods.rb
-lib/cucumber/language_support/step_definition_methods.rb
 lib/cucumber/languages.yml
 lib/cucumber/parser.rb
 lib/cucumber/parser/feature.rb
@@ -457,6 +468,7 @@ spec/cucumber/cli/profile_loader_spec.rb
 spec/cucumber/core_ext/proc_spec.rb
 spec/cucumber/formatter/ansicolor_spec.rb
 spec/cucumber/formatter/color_io_spec.rb
+spec/cucumber/formatter/console_spec.rb
 spec/cucumber/formatter/duration_spec.rb
 spec/cucumber/formatter/html_spec.rb
 spec/cucumber/formatter/junit_spec.rb
